--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,10 @@ jobs:
     - name: Build with Maven
       env:
         DB_URL: ${{ github.workspace }}
-      run: mvn clean test
+      run:
+        echo ${{ github.workspace }}
+        echo $GITHUB_WORKSPACE
+        mvn clean test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
  
